--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,7 +4,7 @@ linter:
   rules:
     always_put_required_named_parameters_first: true
     avoid_classes_with_only_static_members: true
-    sort_constructors_first: true
+    sort_constructors_first: false
     prefer_single_quotes: true
     public_member_api_docs: false
     always_specify_types: false
