--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,12 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  faker: ^1.3.0
   flutter_test:
     sdk: flutter
   lint: ^1.0.0
+  mockito: ^5.0.0
+  test: ^1.16.5
 
 flutter:
   uses-material-design: true
