--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.9.0
   flutter_test:
     sdk: flutter
+  get: ^4.1.1
   lint: ^1.0.0
   mockito: ^5.0.0
   provider: ^5.0.0
