--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,17 +13,18 @@ dependencies:
   equatable: ^2.0.0
   flutter:
     sdk: flutter
-  http:
+  flutter_secure_storage: ^4.1.0
+  get: ^4.1.1
+  http: ^0.13.1
+  provider: ^5.0.0
 
 dev_dependencies:
   faker: ^1.3.0
   flutter_launcher_icons: ^0.9.0
   flutter_test:
     sdk: flutter
-  get: ^4.1.1
   lint: ^1.0.0
   mockito: ^5.0.0
-  provider: ^5.0.0
   test: ^1.16.5
 
 flutter:
